Allow pad resize Resizing the pad no longer covers more space

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,26 +13,39 @@ body {
 div {
     background-color: blue;
     display: flex;
-    flex-grow: 1;
+    flex: 1 1 auto;
     min-width: 30px;
     min-height: 30px;
 }
 
 #main-container {
     display: grid;
-    /* grid-template-columns: repeat(16, auto); */
+    min-width: 512px;
+    min-height: 512px;
+    max-width: 512px;
+    max-height: 512px;
 }
 
 #big-container {
     display: flex;
     flex-grow: 0;
+    flex-basis: 0;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    min-width: 512px;
+    min-height: 512px;
+    max-width: 512px;
+    max-height: 512px;
 }
 
 .cell {
+    display: flex; 
+    flex: 0 1 0;
+    min-width: 0;
+    min-height: 0;
     background-color: rgb(201, 201, 200);
-    border: solid black 1px;
+    /* border: solid black 1px; */
 }
 
 .cell:hover {
